--- a/app/src/main/res/layout/fragment_question6.xml
+++ b/app/src/main/res/layout/fragment_question6.xml
@@ -24,65 +24,59 @@
         android:id="@+id/textView4"
         android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="16dp"
         android:text="6. Como está distribuído o seu patrimônio? "
         app:layout_constraintBottom_toTopOf="@+id/checkBoxA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.24000001"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <CheckBox
         android:id="@+id/checkBoxA"
-        android:layout_width="0dp"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:text="Meu patrimônio não está aplicado ou está todo aplicado em renda fixa e/ou imóveis "
-        app:layout_constraintBottom_toTopOf="@+id/checkBoxC"
+        app:layout_constraintBottom_toTopOf="@+id/checkBoxB"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <CheckBox
-        android:id="@+id/checkBoxC"
-        android:layout_width="0dp"
+        android:id="@+id/checkBoxB"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:text="Menos de 25% em renda variável e o restante em renda fixa e/ou imóveisderados"
-        app:layout_constraintBottom_toTopOf="@+id/checkBoxD"
+        app:layout_constraintBottom_toTopOf="@+id/checkBoxC"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxA" />
 
     <CheckBox
-        android:id="@+id/checkBoxB"
-        android:layout_width="0dp"
+        android:id="@+id/checkBoxC"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="Acima de 50% em renda variável"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:text="Entre 25,01 e 50% aplicado em renda variável e o restante em renda fixa e/ou imóveis"
+        app:layout_constraintBottom_toTopOf="@+id/checkBoxD"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBoxD" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxB" />
 
     <CheckBox
         android:id="@+id/checkBoxD"
-        android:layout_width="0dp"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="Entre 25,01 e 50% aplicado em renda variável e o restante em renda fixa e/ou imóveis"
-        app:layout_constraintBottom_toTopOf="@+id/checkBoxB"
+        android:text="Acima de 50% em renda variável"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBoxC" />
 
