--- a/app/src/main/res/navigation/questions_navigation.xml
+++ b/app/src/main/res/navigation/questions_navigation.xml
@@ -8,23 +8,35 @@
     <fragment
         android:id="@+id/question1"
         android:name="com.example.perfil_investidor.Fragments.Question1.Question1"
-        android:label="fragment_question1"
-        tools:layout="@layout/fragment_question1" >
+        android:label="Questão 1"
+        tools:layout="@layout/fragment_question1">
         <action
             android:id="@+id/action_question1_to_quest2"
-            app:destination="@id/quest2" />
+            app:destination="@id/quest2"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <argument
             android:name="result"
             app:argType="integer" />
+        <argument
+            android:name="name"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/quest2"
         android:name="com.example.perfil_investidor.Fragments.Question2.Quest2"
-        android:label="fragment_quest2"
-        tools:layout="@layout/fragment_quest2" >
+        android:label="Questão 2"
+        tools:layout="@layout/fragment_quest2">
         <action
             android:id="@+id/action_quest2_to_question3"
-            app:destination="@id/question3" />
+            app:destination="@id/question3"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popUpTo="@id/question1"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <argument
             android:name="result"
             app:argType="integer" />
@@ -32,8 +44,8 @@
     <fragment
         android:id="@+id/question3"
         android:name="com.example.perfil_investidor.Fragments.Question3.Question3"
-        android:label="fragment_question3"
-        tools:layout="@layout/fragment_question3" >
+        android:label="Questão 3"
+        tools:layout="@layout/fragment_question3">
         <action
             android:id="@+id/action_question3_to_question4"
             app:destination="@id/question4" />
@@ -44,8 +56,8 @@
     <fragment
         android:id="@+id/question4"
         android:name="com.example.perfil_investidor.Fragments.Question4.Question4"
-        android:label="fragment_question4"
-        tools:layout="@layout/fragment_question4" >
+        android:label="Questão 4"
+        tools:layout="@layout/fragment_question4">
         <action
             android:id="@+id/action_question4_to_question5"
             app:destination="@id/question5" />
@@ -56,8 +68,8 @@
     <fragment
         android:id="@+id/question5"
         android:name="com.example.perfil_investidor.Fragments.Question5.Question5"
-        android:label="fragment_question5"
-        tools:layout="@layout/fragment_question5" >
+        android:label="Questão 5"
+        tools:layout="@layout/fragment_question5">
         <action
             android:id="@+id/action_question5_to_question6"
             app:destination="@id/question6" />
@@ -68,8 +80,8 @@
     <fragment
         android:id="@+id/question6"
         android:name="com.example.perfil_investidor.Fragments.Question6.Question6"
-        android:label="fragment_question6"
-        tools:layout="@layout/fragment_question6" >
+        android:label="Questão 6"
+        tools:layout="@layout/fragment_question6">
         <action
             android:id="@+id/action_question6_to_question7"
             app:destination="@id/question7" />
@@ -80,8 +92,8 @@
     <fragment
         android:id="@+id/question7"
         android:name="com.example.perfil_investidor.Fragments.Question7.Question7"
-        android:label="fragment_question7"
-        tools:layout="@layout/fragment_question7" >
+        android:label="Questão 7"
+        tools:layout="@layout/fragment_question7">
         <action
             android:id="@+id/action_question7_to_question8"
             app:destination="@id/question8" />
@@ -92,8 +104,8 @@
     <fragment
         android:id="@+id/question8"
         android:name="com.example.perfil_investidor.Fragments.Question8.Question8"
-        android:label="fragment_question8"
-        tools:layout="@layout/fragment_question8" >
+        android:label="Questão 8"
+        tools:layout="@layout/fragment_question8">
         <action
             android:id="@+id/action_question8_to_question9"
             app:destination="@id/question9" />
@@ -104,8 +116,8 @@
     <fragment
         android:id="@+id/question9"
         android:name="com.example.perfil_investidor.Fragments.Question9.Question9"
-        android:label="fragment_question9"
-        tools:layout="@layout/fragment_question9" >
+        android:label="Questão 9"
+        tools:layout="@layout/fragment_question9">
         <action
             android:id="@+id/action_question9_to_complete"
             app:destination="@id/complete" />
@@ -116,6 +128,10 @@
     <fragment
         android:id="@+id/complete"
         android:name="com.example.perfil_investidor.Fragments.Complete"
-        android:label="fragment_complete"
-        tools:layout="@layout/fragment_complete" />
+        android:label="Perfil Completo"
+        tools:layout="@layout/fragment_complete">
+        <argument
+            android:name="result"
+            app:argType="integer" />
+    </fragment>
 </navigation>
